--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -110,7 +110,7 @@ ja:
     format: "%{attribute}%{message}"
     messages:
       accepted: を受諾してください
-      blank: を入力してください
+      blank: 値を入力してください
       confirmation: と%{attribute}の入力が一致しません
       empty: を入力してください
       equal_to: は%{count}にしてください
@@ -130,8 +130,8 @@ ja:
       present: は入力しないでください
       required: を入力してください
       taken: はすでに存在します
-      too_long: は%{count}文字以内で入力してください
-      too_short: は%{count}文字以上で入力してください
+      too_long: 値は%{count}文字以内で入力してください
+      too_short: 値は%{count}文字以上で入力してください
       wrong_length: は%{count}文字で入力してください
     template:
       body: 次の項目を確認してください
